--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bitter&family=Ubuntu&family=Yellowtail&display=swap");
+@import url("");
 * {
   margin: 0;
   padding: 0;
@@ -9,208 +9,4 @@
 
 ul {
   list-style-type: none;
-}
-
-body {
-  background-color: #e2eff5;
-}
-
-.title {
-  font-family: "Yellowtail" !important;
-  color: #446CDD;
-  font-size: 3.5em;
-  padding: 10px 0;
-}
-
-#header {
-  background-image: url("imagenes/pankaj-patel-1IW4HQuauSU-unsplash.jpg");
-  height: 350px;
-  background-size: cover;
-  background-position: top;
-  position: relative;
-  border-bottom: 5px solid white;
-}
-#header .text {
-  user-select: none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-#header .text .text-first {
-  font-family: "Yellowtail";
-  font-size: 6em;
-}
-#header .text .text-second, #header .text .text-third {
-  font-size: 3em;
-  font-family: "Bitter";
-  color: #446CDD;
-  font-weight: bold;
-}
-#header .box-img {
-  width: 180px;
-  height: 180px;
-  overflow: hidden;
-  border-radius: 50%;
-  box-sizing: content-box;
-  position: absolute;
-  bottom: -90px;
-  left: 50%;
-  transform: translateX(-50%);
-  border: 5px solid white;
-}
-#header .box-img img {
-  width: inherit;
-  height: inherit;
-}
-
-#about {
-  margin: 100px 0;
-}
-#about .container {
-  display: flex;
-}
-#about .container > div {
-  width: 50%;
-}
-#about .container .box {
-  margin: auto;
-  width: 80%;
-}
-#about .container .aboutme h1 {
-  text-align: center;
-  margin-bottom: 10px;
-}
-#about .container .aboutme p {
-  font-family: "Bitter";
-  line-height: 1.5em;
-}
-#about .container .knowledge {
-  margin-top: 20px;
-}
-#about .container .knowledge .title {
-  margin: 40px 0 10px 0;
-}
-#about .container .knowledge .techs {
-  margin-bottom: 20px;
-}
-#about .container .knowledge .techs span {
-  font-family: "Bitter";
-  display: inline-block;
-  background-color: #444a51;
-  color: white;
-  font-weight: bold;
-  border-radius: 20px;
-  padding: 5px 15px;
-  font-size: 1em;
-  margin: 5px 3px;
-  user-select: none;
-  transition: all 0.3s;
-}
-#about .container .knowledge .techs span i {
-  margin-right: 5px;
-}
-#about .container .knowledge .techs span img {
-  width: 15px;
-}
-#about .container .knowledge .techs span:hover {
-  transform: translateY(-3px);
-}
-#about .container .knowledge .slider {
-  width: 800px;
-  margin-top: 30px;
-}
-#about .container .knowledge .slider > * {
-  font-size: 3em;
-  display: inline-block;
-  margin: 0 20px;
-  color: grey;
-}
-
-.aboutme .tabs {
-  display: flex;
-  gap: 20px;
-  margin: 0 auto 30px auto;
-  width: 80%;
-}
-.aboutme .tabs li {
-  font-family: "Bitter" !important;
-  font-weight: bold;
-  padding: 5px;
-  cursor: pointer;
-  user-select: none;
-  text-transform: uppercase;
-}
-
-.activo {
-  display: block !important;
-}
-
-.activeTab {
-  color: #446CDD !important;
-  border-bottom: 3px solid #446CDD !important;
-}
-
-.carousel_slider {
-  position: relative;
-  height: 100px;
-  width: 540px;
-  overflow: hidden;
-}
-
-.carousel_list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-}
-.carousel_list .carousel__item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 90px;
-}
-.carousel_list span i {
-  font-size: 3em;
-  color: #505050;
-}
-.carousel_list span img {
-  width: 45px;
-  filter: grayscale(100%);
-}
-
-.fa-html5 {
-  color: #E84E31;
-}
-
-.fa-css3-alt {
-  color: #446CDD;
-}
-
-.fa-js {
-  color: #EFD81D;
-}
-
-.fa-sass {
-  color: #fa49c2;
-}
-
-.fa-react {
-  color: #7fb4f0;
-}
-
-.fa-git-alt {
-  color: #E84E31;
-}
-
-.fa-npm {
-  color: #C53635;
-}
-
-.carousel__item i {
-  transition: all 0.4s;
 }/*# sourceMappingURL=style.css.map */
