--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bitter&family=Ubuntu&family=Yellowtail&display=swap');
+@import url('');
 
 * {
     margin: 0;
@@ -11,248 +11,3 @@
 ul {
     list-style-type: none;
 }
-
-body {
-    background-color: #e2eff5;
-}
-
-$color1 : white;
-$color2 : #446CDD;
-
-.title {
-    font-family: 'Yellowtail' !important;
-    color: $color2;
-    font-size: 3.5em;
-    padding: 10px 0;
-}
-
-#header {
-    background-image: url('imagenes/pankaj-patel-1IW4HQuauSU-unsplash.jpg');
-    height: 350px;
-    background-size: cover;
-    background-position: top;
-    position: relative;
-    border-bottom: 5px solid $color1;
-    .text {
-        user-select: none;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        color: white;
-        .text-first {
-            font-family: 'Yellowtail';
-            font-size: 6em;
-        }
-        .text-second, .text-third {
-            font-size: 3em;
-            font-family: 'Bitter';
-            color: $color2;
-            font-weight: bold;
-        }
-    }
-    .box-img {
-        width: 180px;
-        height: 180px;
-        overflow: hidden;
-        border-radius: 50%;
-        box-sizing: content-box;
-        position: absolute;
-        bottom: calc(-180px / 2);
-        left: 50%;
-        transform: translateX(-50%);
-        border: 5px solid $color1;
-        img {
-            width: inherit;
-            height: inherit;
-        }
-    }
-}
-
-
-
-#about {
-    margin: 100px 0;
-    .container {
-        display: flex;
-        & > div {
-            width: 50%;
-        }
-        .box {
-            margin: auto;
-            width: 80%;
-        }
-        .aboutme {
-            h1 {
-                text-align: center;
-                margin-bottom: 10px;
-            }
-            p {
-                font-family: 'Bitter';
-                line-height: 1.5em;
-            }
-        }
-        .knowledge {
-            margin-top: 20px;
-            .title {
-                margin: 40px 0 10px 0;
-            }
-            .techs {
-                margin-bottom: 20px;
-                span {
-                    font-family: 'Bitter';
-                    display: inline-block;
-                    background-color: #444a51;
-                    color: white;
-                    font-weight: bold;
-                    border-radius: 20px;
-                    padding: 5px 15px;
-                    font-size: 1em;
-                    margin: 5px 3px;
-                    user-select: none;
-                    transition: all .3s;
-                    i {
-                        margin-right: 5px;
-                    }
-                    img {
-                        width: 15px;
-                    }
-                    &:hover {
-                        transform: translateY(-3px);
-                    }
-                }
-            }
-            .slider {
-                width: 800px;
-                margin-top: 30px;
-                & > * {
-                    font-size: 3em;
-                    display: inline-block;
-                    margin: 0 20px;
-                    color: grey;
-                }
-            }
-        }
-    }
-}
-
-.aboutme {
-    .tabs {
-        display: flex;
-        gap: 20px;
-        margin: 0 auto 30px auto;
-        width: 80%;
-        li {
-            font-family: 'Bitter' !important;
-            font-weight: bold;
-            padding: 5px;
-            cursor: pointer;
-            user-select: none;
-            text-transform: uppercase;
-        }
-    }
-}
-
-.activo {
-    display: block !important;
-}
-
-
-.activeTab {
-    color: $color2 !important;
-    border-bottom: 3px solid $color2 !important;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-$width: 90px;
-$logos: 6;
-
-
-.carousel_slider {
-    position: relative;
-    height: 100px;
-    width: calc($width * $logos);
-    overflow: hidden;
-}
- 
-.carousel_list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    .carousel__item {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: $width;
-    }
-    span {
-        i {
-            font-size: 3em;
-            color: #505050;
-        }
-        img {
-            width: 45px;
-            filter: grayscale(100%);
-        }
-    }
-}
-
-
-
-.fa-html5 {
-    color: #E84E31;
-}
-.fa-css3-alt{
-    color: #446CDD;
-}
-.fa-js {
-    color: #EFD81D;
-} 
-.fa-sass {
-    color: #fa49c2;
-}
-.fa-react {
-    color: #7fb4f0;
-}
-.fa-git-alt {
-    color: #E84E31;
-}
-.fa-npm {
-    color: #C53635;
-}
-
-.carousel__item {
-    i {
-        transition: all .4s;
-    }
-}
-
