--- a/style.scss
+++ b/style.scss
@@ -1,13 +1,104 @@
-@import url('');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: '';
+    font-family: 'Ubuntu';
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 ul {
     list-style-type: none;
+}
+
+body {
+    background-color: #0E0E0E;
+    color: white;
+}
+
+#Header {
+    margin: auto;
+    width: 95%;
+    padding: 150px 0 50px 0;
+    .contenedor {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .box {
+            margin: 0 50px;
+        }
+        .text-box {
+            width: 600px;
+            .text {
+                padding: 10px 0;
+            }
+            .tabs {
+                span {
+                    display: inline-block;
+                    padding: 5px;
+                    margin: 0 5px;
+                    cursor: pointer;
+                }
+            }
+        }
+        .tech-box {
+            width: 800px;
+            .title {
+                text-align: center;
+                margin-bottom: 20px;
+            }
+            .techs {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                .logo {
+                    margin: 10px;
+                    width: 60px;
+                    background-color: #fff;
+                    padding: 20px 80px;
+                    border-radius: 10px;
+                    box-sizing: content-box;
+                    img {
+                        width: 60px;
+                        min-width: 60px;
+                        display: block;
+                        margin: auto;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.html {
+    background-color: #ff6625 !important;
+}
+
+.css {
+    background-color: #1aa7e4 !important;
+}
+
+.js {
+    background-color: #a8930c !important;
+}
+
+.react {
+    background-color: #d8f6ff !important;
+}
+
+.git {
+    background-color: #8f1d0c !important;
+}
+
+.figma {
+    background-color: #292827 !important;
+}
+
+.bootstrap {
+    background-color: #cdbfe4 !important;
+}
+
+.tailwind {
+    background-color: #007987 !important;
 }
