--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Coda+Caption&family=Lobster&family=Ubuntu:wght@400;700&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -18,9 +17,8 @@ body {
 }
 
 #Header {
-    margin: auto;
-    width: 95%;
-    padding: 150px 0 50px 0;
+    font-size: 18px;
+    padding: 200px 0 50px 0;
     .contenedor {
         display: flex;
         justify-content: center;
@@ -34,16 +32,30 @@ body {
                 padding: 10px 0;
             }
             .tabs {
+                margin-top: 20px;
                 span {
                     display: inline-block;
-                    padding: 5px;
-                    margin: 0 5px;
+                    padding: 7.5px 5px;
+                    margin: 0 10px;
                     cursor: pointer;
+                    color: #ffffff87;
+                    font-weight: bold;
+                    position: relative;
+                    font-size: 1.2em;
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        bottom: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 4px;
+                        background: #ffffff87;
+                    }
                 }
             }
         }
         .tech-box {
-            width: 800px;
+            width: 900px;
             .title {
                 text-align: center;
                 margin-bottom: 20px;
@@ -56,7 +68,7 @@ body {
                     margin: 10px;
                     width: 60px;
                     background-color: #fff;
-                    padding: 20px 80px;
+                    padding: 25px 90px;
                     border-radius: 10px;
                     box-sizing: content-box;
                     img {
@@ -69,7 +81,56 @@ body {
             }
         }
     }
+    .anim-text {
+        background: linear-gradient(90deg,#E04143,#AA3F79);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: bold;
+    }
+    .domain {
+        font-size: 2.5em !important;
+        border-bottom: 2px solid (90deg,#E04143,#AA3F79);
+        font-family: 'Coda Caption', sans-serif !important;
+        font-weight: 900;
+        -webkit-box-reflect: below 1px linear-gradient(transparent,#0008 500%);
+        line-height: .95em;
+        outline: none;
+    }
+    .typetext {
+        font-size: 1.3em;
+        padding: 5px 0;
+        margin-top: 40px;
+    }
+    .tech-title {
+        font-size: 2em;
+        font-family: 'Lobster';
+    }
 }
+
+#CV {
+    a {
+        display: inline-block;
+        text-decoration: none;
+        color: #7373e7;
+        font-weight: bold;
+        padding: 5px 20px;
+        border: 2px solid #7373e7;
+        border-radius: 5px;
+        margin-top: 10px;
+    }
+}
+
+
+.activo {
+    background: linear-gradient(90deg,#E04143,#AA3F79) !important;
+    -webkit-background-clip: text !important;
+    -webkit-text-fill-color: transparent !important;
+    font-weight: bold !important;
+    &::before {
+        background: linear-gradient(90deg,#E04143,#AA3F79) !important;
+    }
+}
+
 
 .html {
     background-color: #ff6625 !important;
@@ -102,3 +163,4 @@ body {
 .tailwind {
     background-color: #007987 !important;
 }
+
