--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Coda+Caption&family=Lobster&family=Ubuntu:wght@400;700&display=swap');
+
+@font-face {
+    font-family: 'Minecraft';
+    src: url('fonts/MinecraftEvenings.otf')
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -16,23 +22,28 @@ body {
     color: white;
 }
 
+main {
+    margin: auto;
+    width: 90%;
+}
+
 #Header {
     font-size: 18px;
     padding: 200px 0 50px 0;
     .contenedor {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         .box {
-            margin: 0 50px;
+            // margin: 0 50px;
         }
         .text-box {
-            width: 600px;
+            width: 700px;
             .text {
                 padding: 10px 0;
             }
             .tabs {
-                margin-top: 20px;
+                margin-top: 30px;
                 span {
                     display: inline-block;
                     padding: 7.5px 5px;
@@ -69,7 +80,7 @@ body {
                     width: 60px;
                     background-color: #fff;
                     padding: 25px 90px;
-                    border-radius: 10px;
+                    border-radius: 5px;
                     box-sizing: content-box;
                     img {
                         width: 60px;
@@ -130,6 +141,132 @@ body {
         background: linear-gradient(90deg,#E04143,#AA3F79) !important;
     }
 }
+
+
+
+#Projects {
+    margin-top: 100px;
+    .title {
+        margin-bottom: 50px;
+        span {
+            font-size: 1.3em;
+            display: block;
+            i {
+                font-size: 1.3em;
+                margin-right: 2px;
+            }
+        }
+    }
+    .contenedor {
+        display: flex;
+        flex-wrap: wrap;
+        width: 1600px;
+        margin: auto;
+        gap: 20px;
+        .box {
+            width: 300px;
+            background-color: #171717;
+            border-radius: 10px;
+            overflow: hidden;
+            .header {
+                height: 180px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: top;
+                }
+            }
+            .body {
+                padding: 20px;
+            }
+            .title {
+                margin-bottom: 20px !important;
+            }
+        }
+    }
+}
+
+
+#Social {
+    margin-top: 150px;
+    .contenedor {
+        gap: 20px;
+        display: flex;
+        .title {
+            width: 50%;
+            height: 100px;
+            text-align: center;
+            background: linear-gradient(to right,#0C4364,#1C3A9E);
+            display: grid;
+            place-items: center;
+            border-radius: 10px;
+            p {
+                font-size: 2.5em;
+                font-family: 'Lobster';
+                letter-spacing: 3px;
+                align-self: center;
+            }
+        }
+        .redes {
+            display: flex;
+            width: 50%;
+            justify-content: center;
+            gap: 20px;
+            & > a {
+                border-radius: 10px;
+                font-size: 3em;
+                width: 25%;
+                display: grid;
+                place-items: center;
+                text-decoration: none;
+                color: white;
+            }
+            .github {
+                background-color: #49228C;
+            }
+            .linkedin {
+                background-color: #0961B8;
+            }
+            .reddit {
+                background-color: #F24100;
+            }
+        }
+    }
+}
+
+
+
+#Contacto {
+    margin-top: 150px;
+    height: 600px;
+    background: #8A42F2;
+    border-radius: 10px;
+    .contenedor {
+        display: flex;
+        height: 100%;
+        .title {
+            width: 50%;
+            display: grid;
+            place-items: center;
+            p {
+                font-family: 'Maincraft';
+                font-size: 5em;
+            }
+        }
+    }
+}
+
+#Footer {
+    height: 150px;
+    background-color: #171717;
+    margin-top: 150px;
+}
+
+
+
+
+
 
 
 .html {
