--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Coda+Caption&family=Lobster&family=Ubuntu:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Coda+Caption&family=Comfortaa&family=Lobster&family=Ubuntu:wght@400;700&display=swap');
 
 @font-face {
     font-family: 'Minecraft';
@@ -33,7 +33,8 @@ main {
     .contenedor {
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
+        line-height: 1.5em;
         .box {
             // margin: 0 50px;
         }
@@ -41,6 +42,7 @@ main {
             width: 700px;
             .text {
                 padding: 10px 0;
+                font-size: 1.1em;
             }
             .tabs {
                 margin-top: 30px;
@@ -77,16 +79,26 @@ main {
                 justify-content: center;
                 .logo {
                     margin: 10px;
-                    width: 60px;
+                    width: 220px;
+                    height: 80px;
                     background-color: #fff;
-                    padding: 25px 90px;
+                    padding: 10px;
                     border-radius: 5px;
                     box-sizing: content-box;
+                    transition: all .3s;
+                    display: grid;
+                    place-items: center;
+                    position: relative;
                     img {
                         width: 60px;
                         min-width: 60px;
                         display: block;
                         margin: auto;
+                    }
+                    &:hover {
+                        transform: translateY(-3px);
+                        position: relative;
+                        z-index: 1;
                     }
                 }
             }
@@ -167,10 +179,12 @@ main {
             width: 300px;
             background-color: #171717;
             border-radius: 10px;
-            overflow: hidden;
+            transition: all .3s;
+            position: relative;
             .header {
                 height: 180px;
                 img {
+                    border-radius: 10px 10px 0 0;
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
@@ -182,6 +196,13 @@ main {
             }
             .title {
                 margin-bottom: 20px !important;
+                font-size: 1.1em;
+                font-weight: bold;
+            }
+            &:hover {
+                transform: translateY(-4px);
+                position: relative;
+                z-index: 1;
             }
         }
     }
@@ -221,6 +242,10 @@ main {
                 place-items: center;
                 text-decoration: none;
                 color: white;
+                transition: all .3s;
+                &:hover {
+                    transform: translateY(-5px);
+                }
             }
             .github {
                 background-color: #49228C;
@@ -251,7 +276,6 @@ main {
             place-items: center;
             p {
                 font-family: 'Maincraft';
-                font-size: 5em;
             }
         }
     }
@@ -266,6 +290,95 @@ main {
 
 
 
+/* ---------- CLASES PARA LOS HOVER ---------- */
+
+
+
+.hover-logo {
+    position: absolute;
+    top: -80%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 300px;
+    height: 400px;
+    background-color: #171717;
+    border-radius: 10px;
+    color: white;
+    padding: 0 20px;
+    z-index: 10 !important;
+    opacity: 0;
+    transition: all .3s;
+    .img-div {
+        padding: 30px 0;
+        img {
+            width: 100px !important;
+        }
+    }
+    .body {
+        .titlee {
+            font-size: 1.5em;
+            margin-bottom: 15px;
+            text-align: center;
+        }
+        .prem {
+            text-align: center;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+        ul {
+            list-style-type: circle;
+            margin-left: 30px;
+        }
+    }
+}
+
+
+.hover-project {
+    position: absolute;
+    top: -10%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 300px;
+    height: 400px;
+    background-color: #171717;
+    border-radius: 10px;
+    color: white;
+    padding: 0 20px;
+    z-index: 10 !important;
+    opacity: 0;
+    transition: all .3s;
+    .cabezera {
+        .titleee {
+            text-transform: uppercase;
+            text-align: center;
+            margin: 60px 0 30px 0;
+            font-size: 1.5em !important;
+        }
+    }
+    .tabss {
+        display: flex;
+        justify-content: center;
+        gap: 40px;
+        span {
+            display: inline-block;
+            font-weight: bold;
+            color: #ffffff87;
+            font-size: 1.2em;
+            position: relative;
+            padding: 7px 0;
+            cursor: pointer;
+            &::before {
+                content: "";
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                height: 4px;
+                background: #ffffff87;
+            }
+        }
+    }
+}
 
 
 
