--- a/style.scss
+++ b/style.scss
@@ -290,7 +290,14 @@ main {
 
 
 
+
+
+
 /* ---------- CLASES PARA LOS HOVER ---------- */
+
+
+
+
 
 
 
@@ -308,6 +315,7 @@ main {
     z-index: 10 !important;
     opacity: 0;
     transition: all .3s;
+    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.3);
     .img-div {
         padding: 30px 0;
         img {
@@ -333,13 +341,16 @@ main {
 }
 
 
+
+
+
 .hover-project {
     position: absolute;
     top: -10%;
     left: 50%;
     transform: translateX(-50%);
-    width: 300px;
-    height: 400px;
+    width: 200px;
+    height: 300px;
     background-color: #171717;
     border-radius: 10px;
     color: white;
@@ -347,6 +358,7 @@ main {
     z-index: 10 !important;
     opacity: 0;
     transition: all .3s;
+    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.3);
     .cabezera {
         .titleee {
             text-transform: uppercase;
@@ -378,7 +390,33 @@ main {
             }
         }
     }
+    .content {
+        padding: 30px 0;
+        display: flex;
+        flex-wrap: nowrap;
+        overflow: hidden;
+        height: 250px;
+        & > div {
+            transition: transform .3s ease;
+            min-width: 100%;
+            margin: 0 5px;
+            p {
+                user-select: none;
+            }
+        }
+    }
 }
+
+
+
+
+
+
+/* --------------- TECH COLORS --------------- */
+
+
+
+
 
 
 
