--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ main {
   left: 50%;
   transform: translateX(-50%);
   width: 200px;
-  height: 300px;
+  height: 200px;
   background-color: #171717;
   border-radius: 10px;
   color: white;
@@ -362,7 +362,7 @@ main {
   display: flex;
   flex-wrap: nowrap;
   overflow: hidden;
-  height: 250px;
+  height: 230px;
 }
 .hover-project .content > div {
   transition: transform 0.3s ease;
@@ -371,6 +371,33 @@ main {
 }
 .hover-project .content > div p {
   user-select: none;
+}
+.hover-project .links {
+  display: flex;
+  justify-content: space-around;
+}
+.hover-project .links a {
+  display: block;
+  color: white;
+  padding: 5px 60px;
+  font-size: 1.5em;
+  background-color: #fff;
+  text-decoration: none;
+  border-radius: 10px;
+}
+.hover-project .links .git {
+  background-color: #49228C !important;
+  transition: all 0.2s;
+}
+.hover-project .links .git:hover {
+  background-color: #401b81 !important;
+}
+.hover-project .links .link {
+  background-color: #F24100;
+  transition: all 0.2s;
+}
+.hover-project .links .link:hover {
+  background-color: #db420a;
 }
 
 /* --------------- TECH COLORS --------------- */
