--- a/style.scss
+++ b/style.scss
@@ -350,7 +350,7 @@ main {
     left: 50%;
     transform: translateX(-50%);
     width: 200px;
-    height: 300px;
+    height: 200px;
     background-color: #171717;
     border-radius: 10px;
     color: white;
@@ -395,13 +395,40 @@ main {
         display: flex;
         flex-wrap: nowrap;
         overflow: hidden;
-        height: 250px;
+        height: 230px;
         & > div {
             transition: transform .3s ease;
             min-width: 100%;
             margin: 0 5px;
             p {
                 user-select: none;
+            }
+        }
+    }
+    .links {
+        display: flex;
+        justify-content: space-around;
+        a {
+            display: block;
+            color: white;
+            padding: 5px 60px;
+            font-size: 1.5em;
+            background-color: #fff;
+            text-decoration: none;
+            border-radius: 10px;
+        }
+        .git {
+            background-color: #49228C !important;
+            transition: all .2s;
+            &:hover {
+                background-color: #401b81 !important;
+            }
+        }
+        .link {
+            background-color: #F24100;
+            transition: all .2s;
+            &:hover {
+                background-color: #db420a;
             }
         }
     }
