--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,7 +13,6 @@
     border-radius: 10px;
 }
 
-
 * {
     margin: 0;
     padding: 0;
@@ -709,7 +708,10 @@ main {
 
 
 
-
+.g-recaptcha {
+    margin: auto;
+    width: 304px;
+}
 
 
 
